Extend PeerExchangeService with optimistic peer exchange
Extend the peer exchange logic with ability to complete future when first peer exchange succeeds (optimistic scenario). Alternatively, wait until all peer connections have been tried.